--- a/car_model_control/config/ackermann_params.yaml
+++ b/car_model_control/config/ackermann_params.yaml
@@ -24,7 +24,7 @@ car_model:
     wheel_radius_multiplier    : 1.0 # default: 1.0
 
     # Steer position angle multipliers for fine tuning.
-    steer_pos_multiplier       : 1.0
+    steer_pos_multiplier       : 0.5
 
     # Velocity commands timeout [s], default 0.5
     cmd_vel_timeout: 0.25
@@ -39,20 +39,20 @@ car_model:
     # Whenever a min_* is unspecified, default to -max_*
     linear:
       x:
-        has_velocity_limits    : true
+        has_velocity_limits    : false
         max_velocity           : 10.0  # m/s
         min_velocity           : -5 # m/s
-        has_acceleration_limits: true
+        has_acceleration_limits: false
         max_acceleration       : 0.8  # m/s^2
         min_acceleration       : -0.4 # m/s^2
-        has_jerk_limits        : true
+        has_jerk_limits        : false
         max_jerk               : 5.0 # m/s^3
 
     angular:
       z:
-        has_velocity_limits    : true
+        has_velocity_limits    : false
         max_velocity           : 1.7  # rad/s
-        has_acceleration_limits: true
+        has_acceleration_limits: false
         max_acceleration       : 1.5  # rad/s^2
-        has_jerk_limits        : true
+        has_jerk_limits        : false
         max_jerk               : 2.5 # rad/s^3
